helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-077009405609b18af, subnet-021e1938db781a718, subnet-00a429dad63882445
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  rules:
    - host: ecom.44.195.10.98.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecom-ecommerce-site
                port:
                  number: 80

    - host: pikachu.44.195.10.98.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pikachu-pokemonapp
                port:
                  number: 80
